# RoboArmCheckers

./: README.md  board.py  getPos.py  reset.py
checkers-board-backend/: server.py
checkers-board-frontend/: App.js  Board.js  HomeScreen.css  HomeScreen.js  Square.js
roboMove/: package.xml  setup.cfg  setup.py
roboMove/roboMove/: board_poses.py  mover.py  test.py
src/: App.css  App.js  HomeScreen.css  HomeScreen.js  Square.js
usefulScripts/: getPos.py
usefulscripts/: reset.py
