<?xml version="1.0"?>
<package format="3">
  <name>robo_control</name>
  <version>0.0.0</version>
  <description>Robot control package</description>

  <maintainer email="none">dara</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  
</package>

